--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -19,31 +19,17 @@ find_package(Qt5 REQUIRED COMPONENTS Widgets)
 # OpenCASCADE
 find_package(OpenCASCADE REQUIRED)
 ### OpenCASCADE
-if (OpenCASCADE_DIR AND EXISTS "${OpenCASCADE_DIR}")
+if (OpenCASCADE_FOUND)
     message(STATUS "OpenCASCADE_DIR: ${OpenCASCADE_DIR}")
     set(OpenCASCADE_INCLUDE_DIR "${OpenCASCADE_DIR}/inc")
     set(OpenCASCADE_LIB_DIR "${OpenCASCADE_DIR}/lib")
     
-    list(APPEND Qt_OSG_OCC_LinkDirectories ${OpenCASCADE_INCLUDE_DIR})
-    
-    link_directories(${OpenCASCADE_LIB_DIR})
-    list(APPEND Qt_OSG_OCC_LinkLibraries
-        TKernel
-        TKG3d
-        TKMath
-        TKBRep
-        TKPrim
-        TKMesh
-        TKTopAlgo
-        TKGeomAlgo
-        TKSTEP
-        TKSTEPAttr
-        TKSTEP209
-        TKXSBase
-    )
+    include_directories(${OpenCASCADE_INCLUDE_DIR})
+    link_directories(${OpenCASCADE_LIBRARY_DIR})
 else()
     message(FATAL_ERROR "OpenCASCADE_DIR not found or path does not exist. ")
 endif()
+set (OpenCASCADE_LIBS TKRWMesh TKBinXCAF TKBin TKBinL TKOpenGl TKXCAF TKVCAF TKCAF TKV3d TKHLR TKMesh TKService TKShHealing TKPrim TKTopAlgo TKGeomAlgo TKBRep TKGeomBase TKG3d TKG2d TKMath TKLCAF TKCDF TKernel)
 
 # UI
 set(SOURCES
@@ -51,12 +37,14 @@ set(SOURCES
     src/MainWindow.cpp
     src/ViewerWidget.cpp
     src/OCCView.cpp
+    src/OcctGlTools.cpp
 )
 
 set(HEADERS
     src/MainWindow.h
     src/ViewerWidget.h
     src/OCCView.h
+    src/OcctGlTools.h
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
