--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,19 +8,21 @@ on:
 
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v3
+    
+    - name: Set up vcpkg and install dependencies
+      uses: lukka/run-vcpkg@v11
       with:
-        version: '5.14.0'
-        target: 'desktop'
-        arch: 'win64_msvc2017_64'
-    - name: Configure CMake
+        vcpkgJsonGlob: 'vcpkg.json'
+
+    - name: Configure CMake project
       run: |
-        cmake -S . -B build -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_PREFIX_PATH=$Qt5_DIR
+        cmake -S . -B build `
+              -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake `
+              -DCMAKE_BUILD_TYPE=Release
+
     - name: Build
       run: cmake --build build --config Release
