--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -56,7 +56,7 @@ set(HEADERS
     src/QStringConv.h
 )
 
-add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
+add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS} resource/resource.qrc)
 
 target_include_directories(${PROJECT_NAME} 
     PRIVATE 
