--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -53,6 +53,9 @@ jobs:
           file-url: 'https://www.fougue.pro/share/bin/OpenCASCADE-${{env.OCC_VERSION}}-vc14-64.zip'
           sha256: ${{matrix.OCC_ZIP_sha256}}
 
+    - name: Extract OpenCascade
+      run: 7z x OpenCASCADE-${{matrix.OCC_VERSION}}-vc14-64.zip
+
     - name: Get count of CPU cores
       uses: SimenB/github-actions-cpu-cores@v1
       id: cpu-cores
